# InstructTune

./: README.md  app.py  docker-compose.yml  main.ipynb  main.py  pyproject.toml
backend/: .env.example  Dockerfile  main.py  requirements.txt
frontend/: Dockerfile  app.py  requirements.txt
